remove uselese functions and cleaned up comments